Fix some alignments
And extract a helper to keep line-length constraints.

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -153,3 +153,16 @@ footer {
 .social-links > ul > li:hover {
   opacity: .8;
 }
+
+%no-gutter-row,
+.no-gutter-row {
+  @include make-row;
+
+  margin-left: 0;
+  margin-right: 0;
+
+  > [class*='col-'] {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
